--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-Body {
-    background-color: hsl(0, 0%, 14%);
-    color: hsl(0, 0%, 100%, 0.87);
-}
+/*Body {*/
+/*    background-color: hsl(0, 0%, 14%);*/
+/*    color: hsl(0, 0%, 100%, 0.87);*/
+/*}*/
