--- a/src/main.css
+++ b/src/main.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/*Body {*/
-/*    background-color: hsl(0, 0%, 14%);*/
-/*    color: hsl(0, 0%, 100%, 0.87);*/
-/*}*/
-
 @layer components {
     .btn {
         @apply font-bold py-2 px-4 m-2 rounded;
@@ -29,10 +24,10 @@
 
     /*button colors: default, primary, info, success, warning, danger, dark */
     .default {
-        @apply bg-gray-100 text-gray-800;
+        @apply bg-gray-100 dark:bg-gray-800 text-gray-800 dark:text-gray-600;
     }
     .default:hover {
-        @apply bg-gray-200 text-gray-800;
+        @apply bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-900;
     }
 
     .primary {
