--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .btn {
-        @apply font-bold py-2 px-4 m-2 rounded;
+        @apply font-bold py-2 px-4 rounded;
     }
     .sm {
         @apply px-2;
